Use Hafnium-specific Docker image with necessary dependencies.
Change-Id: Ic0973d708e497a9d26d90b0724afad1e61267b60

--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -27,7 +27,7 @@
           days-to-keep: 90
           nums-to-keep: 90
     disabled: false
-    node: docker-amd64-xenial
+    node: docker-amd64-hafnium
     display-name: 'Hafnium builder'
     triggers:
       - gerrit:
