--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -7,6 +7,7 @@
             name: origin
             branches:
                 - ${GERRIT_BRANCH}
+            choosing-strategy: gerrit
             basedir: hafnium
             skip-tag: true
             shallow-clone: true
