hafnium-build-test-review: clean up the build job
* fix num-to-keep typo
* add a commented parameters section. It's best practice to split the
  trigger to a separate jenkins job.
* move the scm git configuration under the scm section. We use a single
  repository with submodules so we don't need to use the multiple
  repository syntax.
* clean up scm git configuration:
  - we don't need to wipe the workspace, builds are run on ephemeral
    nodes.
  - don't set basedir, use the default workspace.
* clean up git submodule section: only set recursive to true.
* add build-name wrapper.
* builders shell: we don't need to change directory since we don't set the
  basedir anymore.

Signed-off-by: Fathi Boudra <fathi.boudra@linaro.org>
Change-Id: Ied332cc23645b3febccd98e5794a35b6dcf06e83

--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -1,24 +1,3 @@
-- scm:
-    name: hafnium
-    scm:
-        - git:
-            url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
-            refspec: ${GERRIT_REFSPEC}
-            name: origin
-            branches:
-                - ${GERRIT_BRANCH}
-            choosing-strategy: gerrit
-            basedir: hafnium
-            skip-tag: true
-            shallow-clone: true
-            wipe-workspace: true
-            submodule:
-                disable: false
-                recursive: true
-                tracking: false
-                parent-credentials: true
-                timeout: 15
-
 - job:
     name: hafnium-build-test-review
     project-type: freestyle
@@ -26,10 +5,32 @@
     properties:
       - build-discarder:
           days-to-keep: 90
-          nums-to-keep: 90
+          num-to-keep: 90
+#    parameters:
+#        - string:
+#            name: GERRIT_PROJECT
+#            default: 'hafnium/hafnium'
+#        - string:
+#            name: GERRIT_BRANCH
+#            default: 'master'
+#        - string:
+#            name: GERRIT_REFSPEC
+#            default: 'refs/heads/master'
     disabled: false
     node: docker-amd64-hafnium
     display-name: 'Hafnium builder'
+    scm:
+        - git:
+            url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
+            refspec: ${GERRIT_REFSPEC}
+            name: origin
+            branches:
+                - ${GERRIT_BRANCH}
+            skip-tag: true
+            shallow-clone: true
+            wipe-workspace: false
+            submodule:
+                recursive: true
     triggers:
       - gerrit:
           server-name: 'review.trustedfirmware.org'
@@ -40,16 +41,16 @@
               project-pattern: 'hafnium/hafnium'
               branches:
                 - branch-pattern: 'master'
-    scm:
-        - hafnium
+#            silent: false
+#            silent-start: true
     wrappers:
-      - timestamps
+        - timestamps
+        - build-name:
+            name: '#${BUILD_NUMBER}-${GIT_REVISION,length=8}'
     builders:
       - shell: |
           #!/bin/bash
 
-          set -xe
-
-          cd ${WORKSPACE}/hafnium
+          set -ex
 
           kokoro/build.sh
