hafnium-build-test-review: archive logs
Signed-off-by: Fathi Boudra <fathi.boudra@linaro.org>
Change-Id: I91e35ed41eb7ab547130234b5cf8d3f126dda8f2

--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -48,9 +48,12 @@
         - build-name:
             name: '#${BUILD_NUMBER}-${GIT_REVISION,length=8}'
     builders:
-      - shell: |
-          #!/bin/bash
+        - shell: |
+            #!/bin/bash
 
-          set -ex
+            set -ex
 
-          kokoro/build.sh
+            kokoro/build.sh
+    publishers:
+        - archive:
+            artifacts: 'out/**/kokoro_log/**/sponge_log.*'
