hafnium-build-test-review: add junit reports
Signed-off-by: Fathi Boudra <fathi.boudra@linaro.org>
Change-Id: I144f3d8fbfe9bee15ed58c109eb70d7edb27910d

--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -57,3 +57,5 @@
     publishers:
         - archive:
             artifacts: 'out/**/kokoro_log/**/sponge_log.*'
+        - junit:
+            results: 'out/**/kokoro_log/**/sponge_log.xml'
