--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -26,6 +26,7 @@
             name: origin
             branches:
                 - ${GERRIT_BRANCH}
+            choosing-strategy: gerrit
             skip-tag: true
             shallow-clone: true
             wipe-workspace: false
