Gerrit: Enable Gerrit status flags
Change-Id: Ib44711a5dddc079b20da65bd27198fbcd952b722

--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -35,6 +35,8 @@
     triggers:
       - gerrit:
           server-name: 'review.trustedfirmware.org'
+          gerrit-build-successful-verified-value: 1
+          gerrit-build-failed-verified-value: -1
           trigger-on:
             - patchset-created-event
           projects:
