Disable codereview, enable verified
Signed-off-by: Riku Voipio <riku.voipio@linaro.org>
Change-Id: I7a4720851381e2687d3de71e16368e4a90410fef

--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -35,8 +35,11 @@
     triggers:
       - gerrit:
           server-name: 'review.trustedfirmware.org'
+          override-votes: true
           gerrit-build-successful-verified-value: 1
           gerrit-build-failed-verified-value: -1
+          gerrit-build-successful-codereview-value: 0
+          gerrit-build-failed-codereview-value: 0
           trigger-on:
             - patchset-created-event
           projects:
