--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -6,6 +6,10 @@
       - build-discarder:
           days-to-keep: 90
           num-to-keep: 90
+      - authorization:
+          anonymous:
+           - job-read
+           - job-extended-read
 #    parameters:
 #        - string:
 #            name: GERRIT_PROJECT
