Hafnium: Trigger on Allow-CI label
Signed-off-by: Benjamin Copeland <ben.copeland@linaro.org>
Change-Id: I2b82ef0f4a1847c8c179b325e8bb0db0d656ed14

--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -45,6 +45,9 @@
           gerrit-build-successful-codereview-value: 0
           gerrit-build-failed-codereview-value: 0
           trigger-on:
+            - comment-added-event:
+                approval-category: 'Allow-CI'
+                approval-value: '1'
             - patchset-created-event
           projects:
             - project-compare-type: 'PLAIN'
