hafnium: Allow users to manually re-trigger jobs
Signed-off-by: Benjamin Copeland <ben.copeland@linaro.org>
Change-Id: I9da92639f7a385ccc1f54c01235bd76fa4da1574

--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -10,6 +10,16 @@
           anonymous:
            - job-read
            - job-extended-read
+          qwandor-google:
+            - job-read
+            - job-extended-read
+            - job-build
+            - job-cancel
+          olivier.deprez:
+            - job-read
+            - job-extended-read
+            - job-build
+            - job-cancel
 #    parameters:
 #        - string:
 #            name: GERRIT_PROJECT
