hafnium-build-test-review: fix node name
The label has been renamed to docker-amd64-hafnium-bionic

Reported-by: Olivier Deprez <Olivier.Deprez@arm.com>
Signed-off-by: Fathi Boudra <fathi.boudra@linaro.org>
Change-Id: I676b25ed1f4d6a55845877996cc28a5681588588

--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -31,7 +31,7 @@
 #            name: GERRIT_REFSPEC
 #            default: 'refs/heads/master'
     disabled: false
-    node: docker-amd64-hafnium
+    node: docker-amd64-hafnium-bionic
     display-name: 'Hafnium builder'
     scm:
         - git:
