--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -32,6 +32,7 @@
 #            default: 'refs/heads/master'
     disabled: false
     node: docker-amd64-hafnium-bionic
+    concurrent: true
     display-name: 'Hafnium builder'
     scm:
         - git:
