fix: paths for spmc fvp run job
Fix location where FVP is downloaded to.
Fix PATH to prebuilt clang toolchain when building Hafnium.
Only run kokoro/test_spmc.sh script (Hypervisor+SPMC configuration).
The Hypervisor only FVP suite (kokoro/test.sh --fvp) is not yet stable
enough to be automated.

Signed-off-by: Olivier Deprez <olivier.deprez@arm.com>
Change-Id: I82f57541c429344c289abc0ceebd447a1b6c6692

--- a/hafnium-spmc-test-fvp.yaml
+++ b/hafnium-spmc-test-fvp.yaml
@@ -68,14 +68,14 @@
 
             set -ex
 
-            mkdir ${WORKSPACE}/fvp
-            pushd ${WORKSPACE}/fvp
+            mkdir ${WORKSPACE}/../fvp
+            pushd ${WORKSPACE}/../fvp
             wget ${FVP_MODEL_URL}/${FVP_MODEL_ARCHIVE_NAME}
             tar xvfz ${FVP_MODEL_ARCHIVE_NAME}
             popd
+            PATH=${WORKSPACE}/prebuilts/linux-x64/clang/bin:${WORKSPACE}/prebuilts/linux-x64/dtc:$PATH
             make PROJECT=reference
             kokoro/test_spmc.sh
-            kokoro/test.sh --fvp
     publishers:
         - archive:
             artifacts: 'out/**/kokoro_log/**/sponge_log.*'
