--- a/hafnium-spmc-test-fvp.yaml
+++ b/hafnium-spmc-test-fvp.yaml
@@ -47,7 +47,11 @@
     triggers:
       - gerrit:
           server-name: 'review.trustedfirmware.org'
-          # For now, just silently run the FVP tests, do not vote on result.
+          override-votes: true
+          gerrit-build-successful-verified-value: 1
+          gerrit-build-failed-verified-value: -1
+          gerrit-build-successful-codereview-value: 0
+          gerrit-build-failed-codereview-value: 0
           trigger-on:
             - comment-added-event:
                 approval-category: 'Allow-CI'
