refactor: move job authorization to separate file
Adds authorization.yaml.inc to control all hafnium job permissions.

Signed-off-by: Maksims Svecovs <maksims.svecovs@arm.com>
Change-Id: I63a9f46063cafa1243b0647c64c5b48d9791f8e9

--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -7,19 +7,7 @@
           days-to-keep: 90
           num-to-keep: 90
       - authorization:
-          anonymous:
-           - job-read
-           - job-extended-read
-          qwandor-google:
-            - job-read
-            - job-extended-read
-            - job-build
-            - job-cancel
-          olivier.deprez:
-            - job-read
-            - job-extended-read
-            - job-build
-            - job-cancel
+          !include: authorization.yaml.inc
 #    parameters:
 #        - string:
 #            name: GERRIT_PROJECT
