hafnium-acs-test: Dump PATH/compiler version
Signed-off-by: Paul Sokolovsky <paul.sokolovsky@linaro.org>
Change-Id: Ia2be9de16d522ab715de45a20f538aca661eda59

--- a/hafnium-acs-test.yaml
+++ b/hafnium-acs-test.yaml
@@ -101,6 +101,9 @@
           #!/bin/bash
           set -ex
 
+          echo $PATH
+          aarch64-none-elf-gcc -v
+
           mkdir ${WORKSPACE}/../fvp
           pushd ${WORKSPACE}/../fvp
           wget -q ${FVP_MODEL_URL}/${FVP_MODEL_ARCHIVE_NAME}
