hafnium-*: Add build timeout wrapper
It's the best practice to limit build time to avoid runaway builds. For
example, currently hafnium-acs-test seems to hang indefinitely in FVP
invocation.

Signed-off-by: Paul Sokolovsky <paul.sokolovsky@linaro.org>
Change-Id: I5358fead31e338144598166e5efd955c8dadcf3c

--- a/hafnium-spmc-test-fvp.yaml
+++ b/hafnium-spmc-test-fvp.yaml
@@ -56,6 +56,9 @@
                 - branch-pattern: 'master'
     wrappers:
         - timestamps
+        - timeout:
+            timeout: 60
+            fail: true
         - build-name:
             name: '#${BUILD_NUMBER}-${GIT_REVISION,length=8}'
     builders:
