--- a/hafnium-acs-test.yaml
+++ b/hafnium-acs-test.yaml
@@ -90,6 +90,9 @@
       - ff-a-acs
     wrappers:
       - timestamps
+      - timeout:
+          timeout: 60
+          fail: true
       - credentials-binding:
         - ssh-user-private-key:
             credential-id: TFA_CI_BOT_USER_SSH_KEY
