--- a/hafnium-build-test-review.yaml
+++ b/hafnium-build-test-review.yaml
@@ -57,6 +57,9 @@
 #            silent-start: true
     wrappers:
         - timestamps
+        - timeout:
+            timeout: 60
+            fail: true
         - build-name:
             name: '#${BUILD_NUMBER}-${GIT_REVISION,length=8}'
     builders:
