acs: publish test run log artifacts
On completion of the test run, and workspace tear down, publish the log
artifacts collected as output of the simulation.

Signed-off-by: Olivier Deprez <olivier.deprez@arm.com>
Change-Id: Ied2724de99f9c65d253ffa3846cb76b728399aaf

--- a/hafnium-acs-test.yaml
+++ b/hafnium-acs-test.yaml
@@ -116,4 +116,4 @@
           ${WORKSPACE}/hafnium-ci-scripts/acs/runner.sh
     publishers:
         - archive:
-            artifacts: 'out/**/acs_log/**/*uart*'
+            artifacts: 'logs/*'
