ci: allow artifacts from code coverage analysis to be archived
These artifacts are needed to produce html report.

Signed-off-by: Madhukar Pappireddy <madhukar.pappireddy@arm.com>
Change-Id: I7c4825865638e06b882061e0c3d403c30917be10

--- a/hafnium-code-coverage-fvp.yaml
+++ b/hafnium-code-coverage-fvp.yaml
@@ -58,6 +58,7 @@
             kokoro/test_spmc.sh
     publishers:
         - archive:
-            artifacts: 'out/**/kokoro_log/**/sponge_log.*'
+            artifacts: 'out/**/kokoro_log/**/sponge_log.*, out/reference/qa-code-coverage/**'
+            allow-empty: true
         - junit:
             results: 'out/**/kokoro_log/**/sponge_log.xml'
