ci: add html report to hafnium code coverage
It requires to archive any subfolder containing
'qa-code-coverage' and file 'report.html'. Removing some output
from wget and tar.

Signed-off-by: Saul Romero <saul.romero@arm.com>
Change-Id: I5316d18f640b8f57e59e593bad47f9e67216dca0

--- a/hafnium-code-coverage-fvp.yaml
+++ b/hafnium-code-coverage-fvp.yaml
@@ -50,15 +50,18 @@
 
             mkdir ${WORKSPACE}/../fvp
             pushd ${WORKSPACE}/../fvp
-            wget ${FVP_MODEL_URL}/${FVP_MODEL_ARCHIVE_NAME}
-            tar xvfz ${FVP_MODEL_ARCHIVE_NAME}
+            wget -q ${FVP_MODEL_URL}/${FVP_MODEL_ARCHIVE_NAME}
+            tar xfz ${FVP_MODEL_ARCHIVE_NAME}
             popd
             PATH=${WORKSPACE}/prebuilts/linux-x64/clang/bin:${WORKSPACE}/prebuilts/linux-x64/dtc:$PATH
             make PROJECT=reference ENABLE_ASSERTIONS=1
             kokoro/test_spmc.sh
     publishers:
+        - rich-text-publisher:
+            parser-name: HTML
+            stable-text: ${{FILE:report.html}}
         - archive:
-            artifacts: 'out/**/kokoro_log/**/sponge_log.*, out/reference/qa-code-coverage/**'
+            artifacts: 'out/**/kokoro_log/**/sponge_log.*, out/**/qa-code-coverage/**, report.html'
             allow-empty: true
         - junit:
             results: 'out/**/kokoro_log/**/sponge_log.xml'
