--- a/hafnium-hypervisor-tf-spmc-test-fvp.yaml
+++ b/hafnium-hypervisor-tf-spmc-test-fvp.yaml
@@ -36,11 +36,12 @@
     triggers:
       - gerrit:
           server-name: 'review.trustedfirmware.org'
-          override-votes: true
-          gerrit-build-successful-verified-value: 0
-          gerrit-build-failed-verified-value: 0
-          gerrit-build-successful-codereview-value: 0
-          gerrit-build-failed-codereview-value: 0
+          skip-vote:
+             successful: true
+             failed: true
+             unstable: true
+             notbuilt: true
+             aborted: true
           trigger-on:
             - comment-added-event:
                 approval-category: 'Allow-CI'
