acs: add display name to ACS job
Hafnium jobs implement the display-name property.
Add this property to the Hafnium ACS build and test job.

Signed-off-by: Olivier Deprez <olivier.deprez@arm.com>
Change-Id: Ifead8a69ccd34d6d6e268094354108e97f24df7e

--- a/hafnium-acs-test.yaml
+++ b/hafnium-acs-test.yaml
@@ -61,6 +61,7 @@
     description: ACS compliance tests for Hafnium
     node: docker-amd64-hafnium-focal
     concurrent: true
+    display-name: 'Hafnium ACS build and test'
     properties:
       - build-discarder:
           days-to-keep: 90
