ci: use toolchain from docker image
Similarly to [1], update PATH to use clang toolchain sourced from docker
image for the following Hafnium jobs:

hafnium-code-coverage-fvp
hafnium-hypervisor-tf-spmc-test-fvp
hafnium-spmc-test-fvp

[1] https://review.trustedfirmware.org/c/ci/hafnium-ci-scripts/+/21723

Signed-off-by: Olivier Deprez <olivier.deprez@arm.com>
Change-Id: I5237fc3a4387e8e2a2270d28c592fa99f42c56cc

--- a/hafnium-code-coverage-fvp.yaml
+++ b/hafnium-code-coverage-fvp.yaml
@@ -66,7 +66,7 @@
             wget -q "${FVP_MODEL_URL}/${FVP_MODEL_ARCHIVE_NAME}"
             tar xfz "${FVP_MODEL_ARCHIVE_NAME}"
             popd
-            PATH=${WORKSPACE}/prebuilts/linux-x64/clang/bin:${WORKSPACE}/prebuilts/linux-x64/dtc:$PATH
+            PATH=${WORKSPACE}/prebuilts/linux-x64/dtc:$PATH
             make PROJECT=reference ENABLE_ASSERTIONS=1
             if [ "${DEPLOY_HAFNIUM_AS_SPMC}" == "true" ]; then
               kokoro/test_spmc.sh "${ARGS_DEPLOY_SPMC}"
