Remove quotes to parse arguments individually
Signed-off-by: Saul Romero <saul.romero@arm.com>
Change-Id: Ib1fc7df94a57532219070182042913291cb47d2d

--- a/hafnium-code-coverage-fvp.yaml
+++ b/hafnium-code-coverage-fvp.yaml
@@ -69,10 +69,10 @@
             PATH=${WORKSPACE}/prebuilts/linux-x64/dtc:$PATH
             make PROJECT=reference ENABLE_ASSERTIONS=1
             if [ "${DEPLOY_HAFNIUM_AS_SPMC}" == "true" ]; then
-              kokoro/test_spmc.sh "${ARGS_DEPLOY_SPMC}"
+              kokoro/test_spmc.sh ${ARGS_DEPLOY_SPMC}
             fi
             if [ "${DEPLOY_HAFNIUM_AS_HYP}" == "true" ]; then
-              kokoro/test.sh "${ARGS_DEPLOY_HYP}"
+              kokoro/test.sh ${ARGS_DEPLOY_HYP}
             fi
     publishers:
         - rich-text-publisher:
