ci: add QA TOOLS parameters and periodicity to Code Coverage
- Enable parameters on Hafnium code coverage job to select
different QA TOOL repo and/or branch.
- Execute the Hafnium Code Coverage job once a week.

Signed-off-by: Saul Romero <saul.romero@arm.com>
Change-Id: I57c9c45e1b7a92ad70e1098e45689bbdb8d3a772

--- a/hafnium-code-coverage-fvp.yaml
+++ b/hafnium-code-coverage-fvp.yaml
@@ -32,6 +32,14 @@
             name: ARGS_DEPLOY_HYP
             default:
             trim: true
+        - string:
+            name: QA_REPO_PUBLIC
+            default: https://git.gitlab.arm.com/tooling/qa-tools.git
+            trim: true
+        - string:
+            name: QA_REFSPEC
+            default: master
+            trim: true
     disabled: false
     node: docker-amd64-hafnium-focal
     concurrent: true
@@ -74,6 +82,8 @@
             if [ "${DEPLOY_HAFNIUM_AS_HYP}" == "true" ]; then
               kokoro/test.sh ${ARGS_DEPLOY_HYP}
             fi
+    triggers:
+        - timed: '59 23 * * 6'
     publishers:
         - rich-text-publisher:
             parser-name: HTML
