ci: set default parameters to enable code coverage
- The default value in the parameter enables running tests
on Hafnium as SPMC.

Signed-off-by: Saul Romero <saul.romero@arm.com>
Change-Id: Ic47367ee5fb5ee6f6e8ad5568058cc6d561c5e4a

--- a/hafnium-code-coverage-fvp.yaml
+++ b/hafnium-code-coverage-fvp.yaml
@@ -22,7 +22,7 @@
             description: "Run tests on Hafnium as SPMC."
         - string:
             name: ARGS_DEPLOY_SPMC
-            default:
+            default: --code-coverage
             trim: true
         - bool:
             name: DEPLOY_HAFNIUM_AS_HYP
