hafnium-code-coverage-fvp: add two parameters to include/exclude files/folders
- The parameters are being passed to code coverage tool to filter
files and folders from the report using glob patterns.

Signed-off-by: Saul Romero <saul.romero@arm.com>
Change-Id: I6de4bae34262b1325a9006d6de57de3f2366f624

--- a/hafnium-code-coverage-fvp.yaml
+++ b/hafnium-code-coverage-fvp.yaml
@@ -33,6 +33,14 @@
             default:
             trim: true
         - string:
+            name: INCLUDE_FILES
+            trim: true
+            description: "Space-separated list of glob-patterns defining files/folders to be included in the report."
+        - string:
+            name: EXCLUDE_FILES
+            trim: true
+            description: "Space-separated list of glob-patterns defining files/folders to be excluded in the report."
+        - string:
             name: QA_REPO_PUBLIC
             default: https://git.gitlab.arm.com/tooling/qa-tools.git
             trim: true
