ci: update jobs FVP model to 11.27.19
For the Hafnium jobs using the FVP model:
hafnium-acs-test.yaml
hafnium-code-coverage-fvp.yaml
hafnium-hypervisor-tf-spmc-test-fvp.yaml
hafnium-spmc-test-fvp.yaml

Update the FVP model version to latest public release 11.27.19

Signed-off-by: Olivier Deprez <olivier.deprez@arm.com>
Change-Id: I5090aadd0317a474eeb7373fc7611962e2660f3d

--- a/hafnium-spmc-test-fvp.yaml
+++ b/hafnium-spmc-test-fvp.yaml
@@ -9,10 +9,10 @@
     parameters:
         - string:
             name: FVP_MODEL_ARCHIVE_NAME
-            default: 'FVP_Base_RevC-2xAEMvA_11.24_11_Linux64.tgz'
+            default: 'FM-11.27/FVP_Base_RevC-2xAEMvA_11.27_19_Linux64.tgz'
         - string:
             name: FVP_MODEL_URL
-            default: 'https://developer.arm.com/-/media/Files/downloads/ecosystem-models'
+            default: 'https://developer.arm.com/-/cdn-downloads/permalink/Fixed-Virtual-Platforms'
         - bool:
             name: RUN_ASSERT_DISABLED_BUILD
             description: "Run tests with asserts disabled in addition to the asserts enabled build"
