--- a/hafnium-acs-test.yaml
+++ b/hafnium-acs-test.yaml
@@ -80,10 +80,10 @@
           default: '+refs/heads/main:refs/remotes/origin/main'
       - string:
           name: FVP_MODEL_ARCHIVE_NAME
-          default: 'FVP_Base_RevC-2xAEMvA_11.24_11_Linux64.tgz'
+          default: 'FM-11.27/FVP_Base_RevC-2xAEMvA_11.27_19_Linux64.tgz'
       - string:
           name: FVP_MODEL_URL
-          default: 'https://developer.arm.com/-/media/Files/downloads/ecosystem-models'
+          default: 'https://developer.arm.com/-/cdn-downloads/permalink/Fixed-Virtual-Platforms'
     scm:
       - trusted-firmware-a
       - hafnium
