--- a/hafnium-hypervisor-tf-spmc-test-fvp.yaml
+++ b/hafnium-hypervisor-tf-spmc-test-fvp.yaml
@@ -9,10 +9,10 @@
     parameters:
         - string:
             name: FVP_MODEL_ARCHIVE_NAME
-            default: 'FM-11.27/FVP_Base_RevC-2xAEMvA_11.27_19_Linux64.tgz'
+            default: 'FVP_Base_RevC-2xAEMvA_11.27_19_Linux64.tgz'
         - string:
             name: FVP_MODEL_URL
-            default: 'https://developer.arm.com/-/cdn-downloads/permalink/Fixed-Virtual-Platforms'
+            default: 'https://developer.arm.com/-/cdn-downloads/permalink/Fixed-Virtual-Platforms/FM-11.27'
 
     disabled: false
     node: docker-amd64-hafnium-focal
