--- a/hafnium-spmc-test-fvp.yaml
+++ b/hafnium-spmc-test-fvp.yaml
@@ -9,10 +9,10 @@
     parameters:
         - string:
             name: FVP_MODEL_ARCHIVE_NAME
-            default: 'FM-11.27/FVP_Base_RevC-2xAEMvA_11.27_19_Linux64.tgz'
+            default: 'FVP_Base_RevC-2xAEMvA_11.27_19_Linux64.tgz'
         - string:
             name: FVP_MODEL_URL
-            default: 'https://developer.arm.com/-/cdn-downloads/permalink/Fixed-Virtual-Platforms'
+            default: 'https://developer.arm.com/-/cdn-downloads/permalink/Fixed-Virtual-Platforms/FM-11.27'
         - bool:
             name: RUN_ASSERT_DISABLED_BUILD
             description: "Run tests with asserts disabled in addition to the asserts enabled build"
