ci: Add branch selection param for Hafnium Builder CI Job
Change-Id: I9a36e1fc4b4af3880a9ea0a5eb4cca077cab6f1d
Signed-off-by: Jayanth Dodderi Chidanand <jayanthdodderi.chidanand@arm.com>

--- a/hafnium-spmc-test-fvp.yaml
+++ b/hafnium-spmc-test-fvp.yaml
@@ -13,6 +13,9 @@
         - string:
             name: FVP_MODEL_URL
             default: 'https://developer.arm.com/-/cdn-downloads/permalink/Fixed-Virtual-Platforms/FM-11.27'
+        - string:
+            name: HF_REFSPEC
+            default: '+refs/heads/master:refs/remotes/origin/master'
         - bool:
             name: RUN_ASSERT_DISABLED_BUILD
             description: "Run tests with asserts disabled in addition to the asserts enabled build"
