--- a/hafnium-acs-test.yaml
+++ b/hafnium-acs-test.yaml
@@ -56,6 +56,8 @@
           skip-tag: true
           shallow-clone: true
           wipe-workspace: false
+          submodule:
+              recursive: true
 - job:
     name: hafnium-acs-test
     description: ACS compliance tests for Hafnium
