chore(ci): rename job display name to "Hafnium-SPMC builder (FVP)"
Updates the CI job display-name in hafnium-spmc-test-fvp.yaml
from "Hafnium builder (FVP)" to "Hafnium-SPMC builder (FVP)"
for consistency with the job configuration file and to make
the purpose of the job clearer.

Change-Id: I3a8af83ca5758659d153a9edf65d551cff7f65b9
Signed-off-by: Jayanth Dodderi Chidanand <jayanthdodderi.chidanand@arm.com>

--- a/hafnium-spmc-test-fvp.yaml
+++ b/hafnium-spmc-test-fvp.yaml
@@ -23,7 +23,7 @@
     disabled: false
     node: docker-amd64-hafnium-noble
     concurrent: true
-    display-name: 'Hafnium builder (FVP)'
+    display-name: 'Hafnium-SPMC builder (FVP)'
     scm:
         - git:
             url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
