refactor(ci): rename build-test job to qemu
Renames the CI job definition file and job name from
`hafnium-build-test-review` to `hafnium-build-test-qemu`.
Also updates the display-name from "Hafnium builder" to
"Hafnium builder (QEMU)" to better reflect its purpose.

Change-Id: Ibf732f38aba7cba0f84f653332303afc1399afde
Signed-off-by: Jayanth Dodderi Chidanand <jayanthdodderi.chidanand@arm.com>

--- a/hafnium-build-test-qemu.yaml
+++ b/hafnium-build-test-qemu.yaml
@@ -1,5 +1,5 @@
 - job:
-    name: hafnium-build-test-review
+    name: hafnium-build-test-qemu
     project-type: freestyle
     defaults: global
     properties:
@@ -19,7 +19,7 @@
     disabled: false
     node: docker-amd64-hafnium-noble
     concurrent: true
-    display-name: 'Hafnium builder'
+    display-name: 'Hafnium builder (QEMU)'
     scm:
         - git:
             url: https://review.trustedfirmware.org/${GERRIT_PROJECT}
